--- a/public/ja/index.html
+++ b/public/ja/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ja">
   <head>
-    <title>http://localhost:1313/</title>
-    <link rel="canonical" href="http://localhost:1313/">
+    <title>https://hongo-tech-articles.pages.dev/</title>
+    <link rel="canonical" href="https://hongo-tech-articles.pages.dev/">
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=http://localhost:1313/">
+    <meta http-equiv="refresh" content="0; url=https://hongo-tech-articles.pages.dev/">
   </head>
 </html>
