--- a/public/404.html
+++ b/public/404.html
@@ -217,7 +217,7 @@
   [{
     "@context": "https://schema.org",
     "@type": "Article",
-    "articleSection": "Hongo Tech Articles",
+    "articleSection": "Welcome to Blowfish! :tada:",
     "name": "404 Page not found",
     "headline": "404 Page not found",
     
