--- a/public/zh-cn/index.html
+++ b/public/zh-cn/index.html
@@ -571,7 +571,7 @@
             <a href="/" class="flex items-center">
               <p
                 class="text-sm font-sm hover:text-primary-600 dark:hover:text-primary-400"
-                title="Hongo Tech Articles">
+                title="Welcome to Blowfish! :tada:">
                 日本語
               </p>
             </a>
@@ -661,7 +661,7 @@
             <a href="/" class="flex items-center">
               <p
                 class="text-sm font-sm hover:text-primary-600 dark:hover:text-primary-400"
-                title="Hongo Tech Articles">
+                title="Welcome to Blowfish! :tada:">
                 日本語
               </p>
             </a>
